--- a/static/css/index.css
+++ b/static/css/index.css
@@ -26,7 +26,7 @@ body {
 .sidebar {
   width: 16%;
   background-color: #ffffff;
-  padding-top: 35px;
+  padding-top: 5px;
   position: fixed;
   height: 100vh;
   top: 0;
@@ -40,7 +40,7 @@ body {
 .logo-wrapper {
   width: 100%;
   padding: 5px 25px;
-  margin-bottom: 20px;
+  /* margin-bottom: 20px; */
 }
 
 .logo-wrapper img {
